style: overall design improved and removed unnecessary assets, codes

--- a/src/pages/Home/Features/features.css
+++ b/src/pages/Home/Features/features.css
@@ -8,3 +8,25 @@
   -ms-overflow-style: none; /* IE and Edge */
   scrollbar-width: none; /* Firefox */
 }
+
+.container {
+  perspective: 800px;
+}
+
+.container:hover > .card {
+  cursor: pointer;
+  transform: rotateY(180deg);
+}
+
+.card {
+  transform-style: preserve-3d;
+}
+
+.front {
+  backface-visibility: hidden;
+}
+
+.back {
+  backface-visibility: hidden;
+  transform: rotateY(180deg);
+}
